# Team-59_QRGen

./: Dockerfile  build.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
QRGenProject/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  register.html
backups/: README.md
dbmgmt/: urls.py  views.py
handlescan/: views.py
handlescan/templates/: email.html
qrgen/: models.py  views.py
qrgen/migrations/: 0001_initial.py
qrgen/templates/qrgen/: dashboard.html  generation.html
templates/: 404.html  base.html
