[tool.poetry]
name = "QRGenProject"
version = "0.1.0"
description = "Team-59_QRGen"
authors = ["edoka <peter.edoka.242464@unn.edu.ng>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
cloudinary = "^1.30.0"
dj-database-url = "^1.2.0"
django-cloudinary-storage = "^0.3.0"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
python-magic = "^0.4.27"
qrcode = "^7.3.1"
whitenoise = "^6.2.0"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
