[tool.poetry]
name = "team-59-qrgen"
version = "0.1.0"
description = ""
authors = ["edoka <peter.edoka.242464@unn.edu.ng>"]
readme = "README.md"
packages = [{include = "team_59_qrgen"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2.9"
cloudinary = "^1.31.0"
django-cloudinary-storage = "^0.3.0"
django-environ = "^0.9.0"
python-magic = "^0.4.27"
qrcode = "^7.3.1"
requests = "^2.28.2"
whitenoise = "^6.3.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
